# todos

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  build.rs
.superpowers/sdd/: task-6-report.md
sql/: auto_archive.sql  schema.sql  seed.sql
src/: db.rs  main.rs  model.rs
src/db/: project.rs  tag.rs  task.rs
src/model/: project.rs  settings.rs  sort.rs  task.rs  task_card_data.rs  task_status.rs
ui/: archived-tasks.slint  common.slint  main-window.slint  theme.slint  tray.slint
ui/dialogs/: add-project-dialog.slint  add-tag-dialog.slint  add-task-dialog.slint  close-behavior-dialog.slint  settings-dialog.slint
ui/widgets/: card.slint  close-button.slint  color-presets-bar.slint  dialog-buttons.slint  dialog-footer.slint  dialog-shell.slint  kanban-column.slint  sidebar.slint  styled-text-input.slint
