[package]
name = "todos"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.17.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
chrono = "0.4"

[build-dependencies]
slint-build = "1.17.0"

[profile.release]
codegen-units = 1
lto = true
