[package]
name = "todos"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.17.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
chrono = "0.4.45"
fractional_index = { version = "2.0.2", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
pinyin = "0.11.0"

[build-dependencies]
slint-build = "1.17.0"
winres = "0.1.12"

[profile.release]
codegen-units = 1
lto = true
